--- a/package.json
+++ b/package.json
@@ -1,58 +1,60 @@
 {
   "name": "pokedex-final",
-  "version": "1.0.0",
-  "description": "Pokemon Database",
+  "version": "2.0.0",
+  "description": "Pokemons Database",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --mode development --open",
     "build": "webpack --mode production",
-    "server": "json-server --watch db.json --port 3001"
+    "server": "json-server --watch db.json --port 3001",
+    "deploy": "gh-pages -d public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/victoria31f/final-project-1.git"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Victoria Fedotkina",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/victoria31f/final-project-1/issues"
   },
-  "homepage": "https://github.com/victoria31f/final-project-1#readme",
+  "homepage": "https://victoria31f.github.io/final-project-1/",
   "dependencies": {
-    "@popperjs/core": " 2.9.2",
-    "@reduxjs/toolkit": " 1.5.1",
-    "bootstrap": " 5.0.1",
-    "react": " 17.0.2",
-    "react-dom": " 17.0.2",
-    "react-redux": " 7.2.4",
-    "react-router-dom": " 5.2.0",
-    "regenerator-runtime": " 0.13.7"
+    "@popperjs/core": "2.9.2",
+    "@reduxjs/toolkit": "1.5.1",
+    "bootstrap": "5.0.1",
+    "json-server": "0.16.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.4",
+    "react-router-dom": "5.2.0",
+    "regenerator-runtime": "0.13.7"
   },
   "devDependencies": {
-    "@babel/core": " 7.14.2",
-    "@babel/preset-env": " 7.14.2",
-    "@babel/preset-react": " 7.13.13",
-    "babel-loader": " 8.2.2",
-    "copy-webpack-plugin": " 8.1.1",
-    "css-loader": " 5.2.4",
-    "dotenv": " 9.0.2",
-    "eslint": " 7.26.0",
-    "eslint-config-airbnb": " 18.2.1",
-    "eslint-config-airbnb-base": " 14.2.1",
-    "eslint-plugin-import": " 2.23.2",
-    "eslint-plugin-jsx-a11y": " 6.4.1",
-    "eslint-plugin-react": " 7.23.2",
-    "eslint-plugin-react-hooks": " 4.2.0",
-    "file-loader": " 6.2.0",
-    "html-webpack-plugin": " 5.3.1",
-    "image-webpack-loader": " 7.0.1",
-    "react-hot-loader": " 4.13.0",
-    "source-map-loader": " 2.0.1",
-    "style-loader": " 2.0.0",
-    "webpack": " 5.37.0",
-    "webpack-cli": " 4.7.0",
-    "webpack-dev-server": " 3.11.2"
+    "@babel/core": "7.14.2",
+    "@babel/preset-env": "7.14.2",
+    "@babel/preset-react": "7.13.13",
+    "babel-loader": "8.2.2",
+    "copy-webpack-plugin": "8.1.1",
+    "css-loader": "5.2.4",
+    "dotenv": "9.0.2",
+    "eslint": "7.26.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-import": "2.23.2",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "file-loader": "6.2.0",
+    "gh-pages": "3.1.0",
+    "html-webpack-plugin": "5.3.1",
+    "image-webpack-loader": "7.0.1",
+    "react-hot-loader": "4.13.0",
+    "source-map-loader": "2.0.1",
+    "style-loader": "2.0.0",
+    "webpack": "5.37.0",
+    "webpack-cli": "4.7.0",
+    "webpack-dev-server": "3.11.2"
   }
 }
